sumo/tests/traci/VariableRetrieval/Lane/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 163 255 dummy
simstep 6 1
